#  SPDX-License-Identifier: Apache-2.0
[tool.poetry]
name = "AlexaPy"
version = "1.7.1"
description = "Python API to control Amazon Echo Devices Programatically."
authors = ["Keaton Taylor <keatonstaylor@gmail.com>", "Alan Tse <alandtse@gmail.com"]
license = "Apache-2.0"
readme = 'README.md'
repository = "https://gitlab.com/keatontaylor/alexapy"
keywords = ['amazon', 'alexa', 'homeassistant']
include = ["LICENSE"]


[tool.poetry.dependencies]
python = "^3.6"
bs4 = "*"
aiohttp = "*"
aiofiles = "^0.5.0"
simplejson = "*"
yarl = "*"
requests = "*"
certifi = "*"
backoff = "^1.10.0"

[tool.poetry.dev-dependencies]
aresponses = "*"
detox = "*"
flake8 = "*"
mypy = "*"
pydocstyle = "*"
pylint = "*"
pytest-aiohttp = "*"
pytest-cov = "*"
python-semantic-release = "*"
tox = "*"
safety = "^1.8.7"
black = {version = "^19.10b0", allow-prereleases = true}
poetry = "^1.0.5"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
